# bksd

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  backup_system.db
src/: config.rs  context.rs  lib.rs  logging.rs  main.rs  service.rs
src/adapters/: linux.rs  mod.rs  simulated.rs
src/cli/: mod.rs
src/cli/tui/: app.rs  input.rs  mod.rs  ui.rs
src/core/: hardware.rs  mod.rs  models.rs  orchestrator.rs  ownership.rs  progress.rs  transfer_engine.rs  verifier.rs
src/core/notifications/: mod.rs  slack.rs
src/core/transfer_engine/: native_copy.rs  rsync.rs  simulated.rs
src/db/: jobs.rs  mod.rs  schema.sql
src/rpc/: client.rs  methods.rs  mod.rs  protocol.rs  transport.rs
src/web/: mod.rs  websocket.rs
src/web/assets/: index.html
tests/: linux_adapter.rs  rsync_verification.rs  simulated_adapter.rs
