[package]
name = "bksd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1"
anyhow = "1.0"
tokio-rusqlite = "0.7.0"
uuid = { version = "1.x", features = ["v7"] }
regex = "1.12.2"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }

# Linux hardware adapter
udev = "0.9"
nix = { version = "0.29", features = ["mount", "fs", "poll", "user"] }
thiserror = "2.0"
tokio-util = { version = "0.7", features = ["rt"] }
libc = "0.2"

# Verification
blake3 = "1"

# File timestamps for native copy engine
filetime = "0.2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# TOML file writing
toml = "0.8"

# Notifications
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
